--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
                     </ul>
                     <hr class="small">
                     <p class="text-muted">Copyright © Musicalle 2016</p>
+                    <p> Future event coming soon <a href= "https://www.eventbrite.com/e/musicalle-learn-to-be-a-musician-tickets-24117450945?ref=enivtefor001&utm_source=eb_email&utm_medium=email&utm_campaign=inviteformalv2&ref=enivtefor001&utm_term=attend"> Click here</a> to know more.
                 </div>
             </div>
         </div>
