--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <p class="text-center"> Doris Alexa Iscoa Gale, 20 years old , born on December 26 1996 in Santa Barbara , Ceguaca . Currently , intern career Marketing and International Business at the Universidad Tecnologica Centroamericana.</p>
           </div>
           <img class="center-block" src="img/gis.jpg">
-            <p class="text-center"> Giselle Meraz Margarita Gomez , 19 years old , born on February 12, 1997 in San Pedro Sula , Cortes . Currently , Finance at the Universidad Tecnologica Centroamericana in San Pedro Sula. </p>
+            <p class="text-center"> Giselle Margarita Meraz Gomez , 19 years old , born on February 12, 1997 in San Pedro Sula , Cortes . Currently , Finance at the Universidad Tecnologica Centroamericana in San Pedro Sula. </p>
                 <br><br>
             <h2 class="text-center"> <b>Central Idea </b> </h2>
 
@@ -287,7 +287,6 @@
           <div class="modal-footer">
 
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
